--- a/app/src/main/res/layout/activity_map_traversal.xml
+++ b/app/src/main/res/layout/activity_map_traversal.xml
@@ -24,7 +24,7 @@
         android:id="@+id/South"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="114dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginEnd="136dp"
         android:layout_marginLeft="136dp"
         android:layout_marginRight="136dp"
@@ -40,7 +40,7 @@
         android:id="@+id/West"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="162dp"
+        android:layout_marginBottom="100dp"
         android:layout_marginLeft="48dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="91dp"
@@ -53,7 +53,7 @@
         android:id="@+id/East"
         android:layout_width="88dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="162dp"
+        android:layout_marginBottom="100dp"
         android:layout_marginEnd="48dp"
         android:layout_marginLeft="88dp"
         android:layout_marginRight="48dp"
@@ -67,15 +67,50 @@
 
     <TextView
         android:id="@+id/EventViewer"
-        android:layout_width="262dp"
-        android:layout_height="164dp"
-        android:layout_marginBottom="31dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginRight="53dp"
-        android:layout_marginTop="90dp"
+        android:layout_width="275dp"
+        android:layout_height="240dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="60dp"
+        android:scrollbarAlwaysDrawVerticalTrack="false"
+        android:scrollbars="vertical"
         android:text="@string/default_message"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/North"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Take"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="242dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="242dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="50dp"
+        android:text="@string/take"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/West"
+        app:layout_constraintVertical_bias="0.49" />
+
+    <Button
+        android:id="@+id/Inventory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="17dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginLeft="113dp"
+        android:layout_marginRight="29dp"
+        android:layout_marginStart="113dp"
+        android:layout_marginTop="49dp"
+        android:text="@string/inventory"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Take"
+        app:layout_constraintTop_toBottomOf="@+id/East" />
 </android.support.constraint.ConstraintLayout>
